--- a/TallerScriptPython.org
+++ b/TallerScriptPython.org
@@ -38,6 +38,7 @@
 
 * Objetivos
 - Desarrollar un script de Python con paradigma estructurado
+-HOLAAAAAAAAAAAAAAAA
 
 * Problema
 Usted es el científico de datos para un sistema de lanzamiento de
